--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .venv
 
 
-*/__pycache__/*
+**/__pycache__/*
 */.pytest_cache/*
 */.mypy_cache/*
 */.tox/*
@@ -10,3 +10,5 @@
 */.mypy_cache/*
 */.pytest_cache/*
 */.coverage
+
+
